Fix monster images being squished
Monster images were being flattened and stretched. This fixed that issue.

--- a/src/components/card/card.styles.css
+++ b/src/components/card/card.styles.css
@@ -15,3 +15,9 @@
 .card-container:hover {
   transform: scale(1.05);
 }
+
+.card-container img {
+  width: 180px;
+  height: auto;
+  margin: 0 auto;
+}
